# OpenGL-Learning

./: CMakeLists.txt  README.md  main.cpp
shader/: fragmentShader.frag  fragmentShader.txt  vertexShader.txt  vertexShader.vert
src/: Camera.cpp  Camera.h  DirectionLight.cpp  DirectionLight.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  glad.c
